# loracamp

./: .gitignore  Agents.md  CHANGES.md  PROGRESS.md  README.md  porting_log.md  pyproject.toml  requirements.txt
docs/: cli.md  concepts.md  faq.md  formats.md  getting-started.md  hosting.md  index.md  installation.md  linking.md  manifests.md  metadata-json-schema.md  metadata.md  ref-catalog.md  ref-creator.md  ref-metadata.md  ref-model.md  ref-sample.md  retheming.md  tags.md  testing.md
loracamp/: __init__.py  assets.py  cdn.py  engine.py  i18n.py  main.py  manifests.py  media.py  metadata.py  theming.py  validators.py
loracamp/locales/: en.json
loracamp/specs/: metadata.schema.json
loracamp/static/css/: debug.css  site.css
loracamp/static/js/: browser.js
loracamp/templates/: base.html  creator.html  index.html  model.html
scripts/: fix_md_lint.py
test_catalog/: catalog.toml  digital_observatory.css  firefly_western.css  matrix_green.css
test_catalog/NeuralNomad/: creator.toml
test_catalog/PixelMage/: creator.toml
test_catalog/Scruffy/: creator.toml
test_catalog/aurora-weave/: model.toml
test_catalog/image-only-lora/: model.toml
test_catalog/my-cool-lora/: lora.toml  model.safetensors  model.toml  test_sample.sample.toml
test_catalog/terracotta-dreams/: model.toml
tests/: test_assets.py  test_cdn.py  test_engine.py  test_feeds.py  test_image_lora.py  test_initial.py  test_manifests.py  test_media.py  test_metadata.py  test_metadata_validation.py  test_recursive_images.py  test_theming.py  test_validators.py
(+18 files in other folders)
